feat: added parties handler to proxy the requests and ttk func tests
